--- a/Methods paper example.ipynb
+++ b/Methods paper example.ipynb
@@ -74,6 +74,44 @@
     "    return dp, ds, dw\n",
     "\n",
     "\n",
+    "# Defining SIR model differential equations\n",
+    "def deriv2(y, t, days, l_on, l_off, steps, a, f, p):\n",
+    "    p, s, w = y\n",
+    "\n",
+    "    light = calcLight(days, l_on, l_off, steps, t)\n",
+    "\n",
+    "    dp = sum([\n",
+    "        # Influence of nutrients in the soil on potato growth\n",
+    "        (1. * s**a[0]) * (1 * p),\n",
+    "        # Influence of light on potato growth\n",
+    "        +(1.5 * p) * light,\n",
+    "        # Competition with themselves\n",
+    "        -(a[1] * f1(p)),\n",
+    "        # Potato loss due to worms\n",
+    "        -(2 * w) * (1. * p)\n",
+    "    ])\n",
+    "    ds = sum([\n",
+    "        # Soil nutrient consumption from potatoes\n",
+    "        (-1. * p**a[2]) * (1 * s),\n",
+    "        # Worm contribution by feces to soil nutrients\n",
+    "        +(0.3 * w)\n",
+    "    ])\n",
+    "    dw = sum([\n",
+    "        # Toxic effect of too much nutrients on worm population\n",
+    "        (-2 * s) * (1 * w),\n",
+    "        # Migration caused by potatoes\n",
+    "        +(1.2 * p),\n",
+    "        # Worm birth\n",
+    "        +(0.1 * w),\n",
+    "        # Worm death\n",
+    "        -(a[3] * w),\n",
+    "        p[0] * (a[5] * f2(w, light))\n",
+    "        \n",
+    "    ])\n",
+    "\n",
+    "    return dp, ds, dw\n",
+    "\n",
+    "\n",
     "def calcLight(days, l_on, l_off, steps, t):\n",
     "    l_steps = np.linspace(l_off, l_on, steps)\n",
     "    t_steps = np.linspace(0, 1, steps + 1)\n",
@@ -194,8 +232,6 @@
     "        if steps != 99: st = steps\n",
     "        else: st = 'off/on/off'\n",
     "\n",
-    "        #         title = f\"Time units: {days}, Lights highest: {l_on}\" + \\\n",
-    "        #               f\" Lights lowest: {l_off}\\nSteps: {st}, Worm death: {wd}\"\n",
     "        title = f\"Greenhouse {wI+1}\"\n",
     "\n",
     "        if np.ceil(n / x) < 2: axs = axes[wI % x]\n",
@@ -665,34 +701,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-04T12:18:28.905880Z",
-     "start_time": "2020-08-04T12:18:28.901431Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10., 11., 12., 13.,\n",
-       "       14., 15., 16., 17., 18., 19., 20., 21., 22., 23., 24., 25., 26.,\n",
-       "       27., 28., 29., 30., 31., 32., 33., 34., 35., 36., 37., 38., 39.,\n",
-       "       40., 41., 42., 43., 44., 45., 46., 47., 48., 49., 50.])"
-      ]
-     },
-     "execution_count": 569,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(1,50,50)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
@@ -712,7 +720,7 @@
     "    bestp = [startp]\n",
     "\n",
     "    for i in tqdm(range(N)):\n",
-    "        rn = bestp[-1] + np.random.normal(0, .15, 2)\n",
+    "        rn = bestp[-1] + np.random.normal(0, .05, 2)\n",
     "        tdata = odeint(df, y0, t, args=(startp[0], days, l_val_off, startp[1]))\n",
     "        p = mean_absolute_error(data, tdata)\n",
     "        if p <= score[-1]:\n",
