new and improved

--- a/old/final example file.ipynb
+++ b/old/final example file.ipynb
@@ -1429,6 +1429,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-14T12:32:05.995276Z",
+     "start_time": "2021-03-14T12:32:05.981718Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 124,
    "metadata": {
     "ExecuteTime": {
