new and improved

--- a/Example Code.ipynb
+++ b/Example Code.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.791567Z",
-     "start_time": "2021-03-15T11:40:26.941736Z"
+     "end_time": "2021-03-27T15:28:11.248555Z",
+     "start_time": "2021-03-27T15:28:10.254574Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.803263Z",
-     "start_time": "2021-03-15T11:40:27.793843Z"
+     "end_time": "2021-03-27T15:28:11.263860Z",
+     "start_time": "2021-03-27T15:28:11.251618Z"
     }
    },
    "outputs": [],
@@ -154,8 +154,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.808811Z",
-     "start_time": "2021-03-15T11:40:27.805357Z"
+     "end_time": "2021-03-27T15:28:11.270748Z",
+     "start_time": "2021-03-27T15:28:11.266420Z"
     }
    },
    "outputs": [],
@@ -184,8 +184,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.814509Z",
-     "start_time": "2021-03-15T11:40:27.810724Z"
+     "end_time": "2021-03-27T15:28:11.278737Z",
+     "start_time": "2021-03-27T15:28:11.273475Z"
     }
    },
    "outputs": [],
@@ -216,8 +216,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.819337Z",
-     "start_time": "2021-03-15T11:40:27.816111Z"
+     "end_time": "2021-03-27T15:28:11.284399Z",
+     "start_time": "2021-03-27T15:28:11.280998Z"
     }
    },
    "outputs": [],
@@ -228,7 +228,7 @@
     "        time = np.linspace(1, timesteps, timesteps * resolution)\n",
     "\n",
     "        # Get data\n",
-    "        data = odeint(deriv, y0, time, args=(a, f))\n",
+    "        data = odeint(ODE, y0, time, args=(a, f))\n",
     "\n",
     "        return time, data"
    ]
@@ -245,8 +245,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.834958Z",
-     "start_time": "2021-03-15T11:40:27.821022Z"
+     "end_time": "2021-03-27T15:28:11.301179Z",
+     "start_time": "2021-03-27T15:28:11.286267Z"
     }
    },
    "outputs": [],
@@ -381,8 +381,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.843204Z",
-     "start_time": "2021-03-15T11:40:27.838018Z"
+     "end_time": "2021-03-27T15:28:11.310063Z",
+     "start_time": "2021-03-27T15:28:11.304517Z"
     }
    },
    "outputs": [],
@@ -430,8 +430,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.849758Z",
-     "start_time": "2021-03-15T11:40:27.845540Z"
+     "end_time": "2021-03-27T15:28:11.317659Z",
+     "start_time": "2021-03-27T15:28:11.313165Z"
     }
    },
    "outputs": [],
@@ -484,8 +484,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:27.861935Z",
-     "start_time": "2021-03-15T11:40:27.851280Z"
+     "end_time": "2021-03-27T15:28:11.329673Z",
+     "start_time": "2021-03-27T15:28:11.319147Z"
     }
    },
    "outputs": [],
@@ -518,11 +518,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:43:03.192703Z",
-     "start_time": "2021-03-15T11:43:02.406215Z"
+     "end_time": "2021-03-27T15:28:12.328981Z",
+     "start_time": "2021-03-27T15:28:11.331142Z"
     }
    },
    "outputs": [
@@ -576,8 +576,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:28.487753Z",
-     "start_time": "2021-03-15T11:40:28.460244Z"
+     "end_time": "2021-03-27T15:28:12.363906Z",
+     "start_time": "2021-03-27T15:28:12.330961Z"
     }
    },
    "outputs": [
@@ -700,8 +700,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:28.492589Z",
-     "start_time": "2021-03-15T11:40:28.489298Z"
+     "end_time": "2021-03-27T15:28:12.371321Z",
+     "start_time": "2021-03-27T15:28:12.367095Z"
     }
    },
    "outputs": [],
@@ -728,8 +728,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:48.121607Z",
-     "start_time": "2021-03-15T11:40:28.494965Z"
+     "end_time": "2021-03-27T15:28:31.359861Z",
+     "start_time": "2021-03-27T15:28:12.373269Z"
     },
     "code_folding": [
      3,
@@ -741,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [00:19<00:00, 153.07it/s]\n"
+      "100%|██████████| 3000/3000 [00:18<00:00, 158.37it/s]\n"
      ]
     }
    ],
@@ -778,11 +778,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:43:30.390247Z",
-     "start_time": "2021-03-15T11:43:27.832924Z"
+     "end_time": "2021-03-27T15:28:34.212024Z",
+     "start_time": "2021-03-27T15:28:31.362004Z"
     },
     "code_folding": []
    },
@@ -811,6 +811,7 @@
    "source": [
     "fig, axs = plt.subplots(1, 2, figsize=(20, 8), tight_layout=True)\n",
     "creds = []\n",
+    "dists = []\n",
     "a_n = np.array([[s[\"a\"][0], s[\"a\"][1]] for s in simSettings])\n",
     "for i in range(2):\n",
     "    samples = a_n[:, i]\n",
@@ -821,6 +822,7 @@
     "    N, bins, patches = axs[i].hist(samples, density=True, bins=29, alpha=0.8, label=\"Raw distribution\")\n",
     "\n",
     "    # estimated distribution\n",
+    "    dists.append((x_mu, y_mu))\n",
     "    axs[i].plot(x_mu, y_mu, color='steelblue', linestyle='-', linewidth=2, label=\"Density distribution\")\n",
     "\n",
     "    # high density intervals\n",
@@ -869,11 +871,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:43:38.735147Z",
-     "start_time": "2021-03-15T11:43:38.007326Z"
+     "end_time": "2021-03-27T15:28:35.018302Z",
+     "start_time": "2021-03-27T15:28:34.213748Z"
     }
    },
    "outputs": [
@@ -954,8 +956,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:40:51.336485Z",
-     "start_time": "2021-03-15T11:40:51.329592Z"
+     "end_time": "2021-03-27T15:28:35.026144Z",
+     "start_time": "2021-03-27T15:28:35.019964Z"
     }
    },
    "outputs": [],
@@ -964,18 +966,19 @@
     "paramValues = [[s[\"a\"][0], s[\"a\"][1]] for s in simSettings]\n",
     "indices = [\n",
     "    i for i, d in enumerate(paramValues)\n",
-    "    if creds[0][0] < d[0] < creds[0][1] and (\n",
+    "    if creds[0][0] < d\n",
+    "    [0] < creds[0][1] and (\n",
     "        creds[1][0] < d[1] < creds[1][1] or creds[2][0] < d[1] < creds[2][1])\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:43:47.262748Z",
-     "start_time": "2021-03-15T11:43:46.463166Z"
+     "end_time": "2021-03-27T15:28:35.911543Z",
+     "start_time": "2021-03-27T15:28:35.027501Z"
     }
    },
    "outputs": [
@@ -1031,8 +1034,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T11:41:22.982941Z",
-     "start_time": "2021-03-15T11:40:52.124333Z"
+     "end_time": "2021-03-27T15:29:06.474948Z",
+     "start_time": "2021-03-27T15:28:35.914026Z"
     }
    },
    "outputs": [
@@ -1040,7 +1043,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [00:30<00:00, 194.96it/s]\n"
+      "100%|██████████| 6000/6000 [00:30<00:00, 196.81it/s]"
      ]
     },
     {
@@ -1062,6 +1065,13 @@
       "\n",
       "The higher-order sensitivity indices\n",
       "x1-x2: 0.0203758130158197\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
